updated loadchart
